--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 เปลี่ยน path
-1. ใน main_code ชื่อตัวแปร user_data_path = 'C:/fra361_st4_voca_ui/user_data' คง directory /user_data ไว้
-2. ใน upload_pic 'C:/fra361_st4_voca_ui/ui_photo/        ' คง directory ui_photo/ ไว้
+1. ใน main_code.py บรรทัดที่ 2 แก้ตัวแปรชื่อ project_path = 'C:/fra361_st4_voca_ui' เป็นของ path ตัวเอง
+2. ใน upload_pic.py บรรทัดที่ 2 แก้ตัวแปรชื่อ project_path = 'C:/fra361_st4_voca_ui' เป็นของ path ตัวเอง
 
